force-app/main/default/objects/Secondary_School__c/Secondary_School__c.object-meta.xml
<CustomObject>
    <label>Secondary School</label>
    <nameField>
        <label>Secondary School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Secondary Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>