force-app/main/default/objects/Secondary_School__c/fields/NCES_School_ID__c.field-meta.xml
<CustomField>
    <fullName>NCES_School_ID__c</fullName>
    <label>NCES School ID #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>